[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "llmd"
version = "0.0.25"
authors = [
    {name = "Mat Weldon", email = "nope@nope.com"},
]
description = "A tool for working with Large Language Models"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["llm", "ai", "nlp"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv",
    "llm >= 0.16",
    "llm-claude-3 >= 0.5",
    "anthropic",
    "platformdirs",
    ]

[project.scripts]
llmd = "llm_tool.__main__:main"
llmd-config-path = "llm_tool.config_and_system:get_or_make_user_config_path"

[project.urls]
"Homepage" = "https://github.com/matweldon/markdown_llm"
"Bug Tracker" = "https://github.com/matweldon/markdown_llm/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.in"]}
#version = {attr = "llm_tool.__version__"}
# For dynamic version, just add `__version__ = ****` to __init__.py, and add `dynamic = ["version",...]` above
# and remove `version = ***` under [project] above

[tool.setuptools]
include-package-data = true